--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,6 +34,31 @@ services:
     depends_on:
       - db
 
+  celery_worker:
+    build:
+        context: ./
+        dockerfile: ./deploy/celery/Dockerfile
+    command: celery -A app.celery_tasks worker --loglevel=info
+    volumes:
+      - .:/code
+    depends_on:
+      - redis
+
+  celery_beat:
+    build:
+        context: ./
+        dockerfile: ./deploy/celery/Dockerfile
+    command: celery -A app.celery_tasks beat --loglevel=info
+    volumes:
+      - .:/code
+    depends_on:
+      - redis
+
+  redis:
+    image: redis:7
+    ports:
+      - "6379:6379"
+
 
 volumes:
   db:
