--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,9 +30,9 @@ jobs:
           script: |
             sudo docker stop $(sudo docker ps -a -q)
             sudo docker system prune -a
-            rm -rf Project
-            git clone git@github.com:user/Project.git
-            cd Project
+            rm -rf AutoQuill
+            git clone git@github.com:Evgeniy-Developer-droid/AutoQuill.git
+            cd AutoQuill
             
             echo "${{ secrets.ENV_FILE }}" > .env
             
