--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -27,6 +27,7 @@ services:
       - .env
     depends_on:
       - db
+      - elasticsearch
 
   celery_worker:
     build:
@@ -48,6 +49,30 @@ services:
     depends_on:
       - redis
 
+  elasticsearch:
+    image: elasticsearch:8.14.0
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - ES_JAVA_OPTS=-Xms1g -Xmx1g
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+    volumes:
+      - ./elasticsearch_data:/usr/share/elasticsearch/data
+    restart: unless-stopped
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:9200/_cluster/health" ]
+      interval: 1m30s
+      timeout: 10s
+      retries: 5
+      start_period: 1m
+
   redis:
     image: redis:7
     ports:
@@ -57,3 +82,5 @@ services:
 volumes:
   db:
   app:
+  redis:
+  elasticsearch:
