--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,30 @@ services:
     env_file:
       - .env
 
+  elasticsearch:
+    image: elasticsearch:8.14.0
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - ES_JAVA_OPTS=-Xms1g -Xmx1g
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+    volumes:
+      - ./elasticsearch_data:/usr/share/elasticsearch/data
+    restart: unless-stopped
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:9200/_cluster/health" ]
+      interval: 1m30s
+      timeout: 10s
+      retries: 5
+      start_period: 1m
+
   adminer:
     image: adminer
     restart: always
@@ -33,6 +57,7 @@ services:
       - .env
     depends_on:
       - db
+      - elasticsearch
 
   celery_worker:
     build:
@@ -59,7 +84,22 @@ services:
     ports:
       - "6379:6379"
 
+  kibana:
+    image: kibana:8.14.0
+    container_name: kibana
+    depends_on:
+      - elasticsearch
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      - SERVER_NAME=kibana.local
+      - XPACK_SECURITY_ENABLED=false          # Якщо без авторизації
+    ports:
+      - "5601:5601"
+    restart: unless-stopped
+
 
 volumes:
   db:
   app:
+  redis:
+  elasticsearch:
