--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,3 +38,4 @@ jobs:
             
             sudo docker compose -f docker-compose.prod.yaml build
             sudo docker compose -f docker-compose.prod.yaml up -d
+            sudo docker exec -it app alembic upgrade head
