--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -81,8 +81,13 @@ services:
 
   redis:
     image: redis:7
+    container_name: redis
+    command: [ "redis-server", "--requirepass", "${REDIS_PASSWORD}" ]
+    volumes:
+      - ./redis_data:/data
     ports:
-      - "6379:6379"
+      - "127.0.0.1:6379:6379"
+    restart: unless-stopped
 
   kibana:
     image: kibana:8.14.0
