--- a/deploy/dev/Dockerfile
+++ b/deploy/dev/Dockerfile
@@ -1,15 +1,15 @@
 
-FROM python:3.9
+FROM python:3.10-slim
 
 
 WORKDIR /code
 
 
-COPY ./deploy/dev/req.txt /code/req.txt
+COPY ./deploy/requirements-base.txt /code
+RUN --mount=type=cache,target=/root/.cache/pip pip install -r requirements-base.txt
 
-RUN  pip install --no-cache-dir --upgrade pip
-
-RUN pip install --no-cache-dir --upgrade -r /code/req.txt
+COPY ./deploy/requirements-dev.txt /code
+RUN --mount=type=cache,target=/root/.cache/pip pip install -r requirements-dev.txt
 
 
 COPY ./ /code
