--- a/deploy/requirements-base.txt
+++ b/deploy/requirements-base.txt
@@ -1,15 +1,16 @@
 # ML / NLP / Langchain
-torch==2.2.2
-sentence-transformers==3.0.1
-transformers==4.40.1
-tiktoken==0.7
-langchain==0.2.2
-langchain-core==0.2.19
-langchain-openai==0.1.16
-langchain-elasticsearch==0.2.2
-langchain-huggingface==0.0.3
-openai==1.32.0
-langgraph==0.1.9
+torch==2.7.0
+sentence-transformers==4.1.0
+transformers==4.52.3
+tiktoken==0.9.0
+langchain==0.3.25
+langchain-core==0.3.61
+langchain-openai==0.3.18
+langchain-elasticsearch==0.3.2
+langchain-huggingface==0.2.0
+langchain-community==0.3.24
+openai==1.82.0
+langgraph==0.4.5
 
 # FastAPI, Celery, ORM
 fastapi==0.115.6
