--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           script: |
             cd AutoQuill
-            sudo docker compose -f docker-compose.prod.yaml down --remove-orphans
+            sudo docker compose -f docker-compose.prod.yaml down
             sudo docker image prune -f
             cd ..
             rm -rf AutoQuill
